키워드검색 페이지네이션, 카테고리검색 및 페이지네이션 구현

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,8 +11,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <form action="/search" class="d-flex" role="search" method="get">
-                    <input class="form-control me-2" type="search" name="searchWord" placeholder="물품을 검색해보세요." aria-label="Search">
+                <form action="/boardList/search" class="d-flex" role="search" method="get">
+                    <input class="form-control me-2" type="search" name="keyword" placeholder="물품을 검색해보세요." aria-label="Search">
                     <button class="btn btn-link" type="submit">
                         <img src="https://img.icons8.com/ios-glyphs/32/000000/search--v1.png" alt="search"/>
                     </button>
@@ -268,6 +268,56 @@
                 sync: false,
                 success: function () {
                     $(activeAlarmTagId).remove();
+
+                    $.ajax({
+                        url:"/activityAlarmList/show.do",
+                        type:"get",
+                        sync: false,
+                        success: function (activityAlarmList) {
+
+                            $("#alarmList").css("display", "").empty().append(
+                                "<div style='height:50px; vertical-align:middle'>" +
+                                    "<div id='activitiyAlarmBtnSection' style='width: 50%; display: inline-block; border-bottom: 1px solid orange'>" +
+                                    "   <button id='activityAlarmSection' class='alarmClass' style='float: left; margin-left: 60px; color: orange; line-height: 40px; background-color:transparent; border: 0; outline: 0;'>활동알림</button>" +
+                                    "</div>" +
+                                    "<div id='keywordAlarmBtnSection' style='width: 50%; display: inline-block'>" +
+                                        "<button id='keywordAlarmSection' class='alarmClass' style='float: left; margin-left: 60px; line-height: 40px; background-color:transparent; border: 0; outline: 0;'>키워드알림</button>" +
+                                    "</div>" +
+                                "</div>"
+                            );
+
+                            $.each(activityAlarmList, function (index, activityAlarm) {
+                                let clickYnTag;
+
+                                if (activityAlarm.clickYn === "Y") {
+                                    clickYnTag = "<div id='circle2'></div>";
+                                } else {
+                                    clickYnTag = "<div id='circle1'></div>";
+                                }
+
+                                $("#alarmList").append(
+                                    "<li id=\"activeAlarm-" + activityAlarm.id + "\">" +
+                                        "<div style='float:left; display: inline-block; width: 88%'>" +
+                                            "<a href=\"" + activityAlarm.link + "\" class=\"dropdown-item list-group-item-action\" id=\"activityAlarm-" + activityAlarm.id + "\" onclick='alarmClick(this)'>" +
+                                                "<div style='float:left; display: inline-block; margin-right: 10px; margin-top: 10px;'>" +
+                                                    clickYnTag +
+                                                "</div>" +
+                                                "<div style='display: inline-block'>" +
+                                                    "<small class=\"text-muted\" style='white-space: normal'>" + "<span style='color:#0090F9'>" + activityAlarm.sender + "</span>" + "님이 " + activityAlarm.message + "</small>" +
+                                                    "<small class=\"fromNow text-muted\" style='display: block'>" + activityAlarm.diffCreatedAt + "</small>" +
+                                                "</div>" +
+                                            "</a>" +
+                                        "</div>" +
+                                        "<div style='float: right; display: inline-block; margin-right: 20px;'>" +
+                                            "<button id='deleteActiveAlarmBtn' style='float:right; display: inline-block; margin-top: 4px; background-color:transparent; border: 0; outline: 0;' value=\"" + activityAlarm.id + "\">" +
+                                                "<img src=\"https://img.icons8.com/tiny-color/16/null/cancel.png\" alt='X'/>" +
+                                            "</button>" +
+                                        "</div>" +
+                                    "</li>"
+                                )
+                            })
+                        }
+                    });
                 }
             })
         });
