--- a/src/main/resources/templates/board/InquireBoardList.html
+++ b/src/main/resources/templates/board/InquireBoardList.html
@@ -3,27 +3,112 @@
 <head th:replace="fragments/head::head"></head>
 <header th:replace="fragments/header::header"></header>
 <body>
-<script th:inline="javascript">
-    /* <![CDATA[ */
-    var errorMessage = /*[[${errorMsg}]]*/
-    var successMessage = /*[[${successMsg}]]*/
-    /* ]]> */
+<div style="text-align: center;">
+    <h3 style="text-align: center" th:if="${searchType eq 'ALL'}"></h3>
+    <span style="color: orange; font-family: 'Jua', sans-serif; font-size: 30px; font-weight: bold;" th:if="${searchType eq 'KEYWORD'}">"[[${keyword}]]"</span> <small th:if="${searchType eq 'KEYWORD'}">에 대한 검색결과 입니다.</small>
+    <span style="color: orange; font-family: 'Jua', sans-serif; font-size: 30px; font-weight: bold;" th:if="${searchType eq 'CATEGORY'}">"[[${category}]]"</span>
+</div>
+<div style="margin-left: 1550px;">
+    <li class="nav-item dropdown" style="list-style: none">
+        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" style="display: inline-block">
+            <img src="https://img.icons8.com/plumpy/24/null/menu-rounded.png"/>
+        </a>
+        <ul class="dropdown-menu" style="width: 330px;">
+            <li style="text-align: center">중고거래 카테고리</li>
+            <li><hr class="dropdown-divider"></li>
 
-    if (errorMessage != null) {
-        Swal.fire({
-           title: 'Error',
-           html: errorMessage,
-           icon: "error"
-        });
-    } else if (successMessage != null) {
-        Swal.fire({
-            title: 'Success',
-            html: successMessage,
-            icon: 'success'
-        })
-    }
+            <li style="display: inline-block; width: 156px;">
+                <form action="/boardList/category" class="d-flex" role="search" method="get">
+                    <input type="hidden" name="categoryCd" value="101000">
+                    <button class="dropdown-item" type="submit" style="border:0; outline: 0; background-color: transparent;">
+                        <img src="https://img.icons8.com/ios-filled/24/null/imac.png"/> 디지털기기
+                    </button>
+                </form>
+            </li>
 
-</script>
+            <li style="display: inline-block; width: 156px;">
+                <form action="/boardList/category" class="d-flex" role="search" method="get">
+                    <input type="hidden" name="categoryCd" value="101001">
+                    <button class="dropdown-item" type="submit" style="border:0; outline: 0; background-color: transparent;">
+                        <img src="https://img.icons8.com/ios-glyphs/24/null/vacuum-cleaner.png"/> 생활가전
+                    </button>
+                </form>
+            </li>
+
+            <li style="display: inline-block; width: 156px;">
+                <form action="/boardList/category" class="d-flex" role="search" method="get">
+                    <input type="hidden" name="categoryCd" value="102000">
+                    <button class="dropdown-item" type="submit" style="border:0; outline: 0; background-color: transparent;">
+                        <img src="https://img.icons8.com/windows/24/null/sofa.png"/> 가구/인테리어
+                    </button>
+                </form>
+            </li>
+
+            <li style="display: inline-block; width: 156px;">
+                <form action="/boardList/category" class="d-flex" role="search" method="get">
+                    <input type="hidden" name="categoryCd" value="103000">
+                    <button class="dropdown-item" type="submit" style="border:0; outline: 0; background-color: transparent;">
+                        <img src="https://img.icons8.com/windows/24/null/teapot.png"/> 생활/주방
+                    </button>
+                </form>
+            </li>
+
+            <li style="display: inline-block; width: 156px;">
+                <form action="/boardList/category" class="d-flex" role="search" method="get">
+                    <input type="hidden" name="categoryCd" value="104000">
+                    <button class="dropdown-item" type="submit" style="border:0; outline: 0; background-color: transparent;">
+                        <img src="https://img.icons8.com/windows/24/null/baby-bottle.png"/> 유아동
+                    </button>
+                </form>
+            </li>
+
+            <li style="display: inline-block; width: 156px;">
+                <form action="/boardList/category" class="d-flex" role="search" method="get">
+                    <input type="hidden" name="categoryCd" value="105000">
+                    <button class="dropdown-item" type="submit" style="border:0; outline: 0; background-color: transparent;">
+                        <img src="https://img.icons8.com/windows/24/null/comic-book.png"/> 유아도서
+                    </button>
+                </form>
+            </li>
+
+            <li style="display: inline-block; width: 156px;">
+                <form action="/boardList/category" class="d-flex" role="search" method="get">
+                    <input type="hidden" name="categoryCd" value="106000">
+                    <button class="dropdown-item" type="submit" style="border:0; outline: 0; background-color: transparent;">
+                        <img src="https://img.icons8.com/fluency-systems-regular/24/null/slip-dress.png"/> 여성의류
+                    </button>
+                </form>
+            </li>
+
+            <li style="display: inline-block; width: 156px;">
+                <form action="/boardList/category" class="d-flex" role="search" method="get">
+                    <input type="hidden" name="categoryCd" value="106001">
+                    <button class="dropdown-item" type="submit" style="border:0; outline: 0; background-color: transparent;">
+                        <img src="https://img.icons8.com/windows/24/null/suit.png"/> 남성의류
+                    </button>
+                </form>
+            </li>
+
+            <li style="display: inline-block; width: 156px;">
+                <form action="/boardList/category" class="d-flex" role="search" method="get">
+                    <input type="hidden" name="categoryCd" value="107000">
+                    <button class="dropdown-item" type="submit" style="border:0; outline: 0; background-color: transparent;">
+                        <img src="https://img.icons8.com/wired/24/null/tennis.png"/> 스포츠/레져
+                    </button>
+                </form>
+            </li>
+
+            <li style="display: inline-block; width: 156px;">
+                <form action="/boardList/category" class="d-flex" role="search" method="get">
+                    <input type="hidden" name="categoryCd" value="108000">
+                    <button class="dropdown-item" type="submit" style="border:0; outline: 0; background-color: transparent;">
+                        <img src="https://img.icons8.com/ios-glyphs/24/null/literature--v1.png"/> 도서
+                    </button>
+                </form>
+            </li>
+        </ul>
+    </li>
+</div>
 <div class="container">
     <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="card-deck">
@@ -55,18 +140,75 @@
             </th:block>
         </div>
     </div>
-    <div style="text-align: center; margin-top: 20px;">
+    <div th:if="${searchType eq 'ALL'}" style="text-align: center; margin-top: 20px;">
         <th:block th:if="${hasNextPageYn eq 'Y'}">
-            <form action="/" method="get">
+            <form action="/boardList" method="get">
                 <input type="hidden" name="offset" th:value="${boardList.size()}" />
-                <button type="submit" class="btn btn-primary btn-lg btn-block" style="background-color: orange; color: white; border: 1px solid orange">등록 상품 더보기</button>
+                <button type="submit" class="btn btn-primary btn-lg btn-block lastPage" style="background-color: orange; color: white; border: 1px solid orange">등록 상품 더보기</button>
             </form>
         </th:block>
         <th:block th:if="${hasNextPageYn eq 'N'}">
-            <span style="color: orange">마지막 상품 입니다.</span>
+            <span style="color: orange" class="lastPage">마지막 상품 입니다.</span>
+        </th:block>
+    </div>
+
+    <div th:if="${searchType eq 'KEYWORD'}" style="text-align: center; margin-top: 20px;">
+        <th:block th:if="${hasNextPageYn eq 'Y'}">
+            <form action="/boardList/search" method="get">
+                <input type="hidden" name="keyword" th:value="${keyword}">
+                <input type="hidden" name="offset" th:value="${boardList.size()}" />
+                <button type="submit" class="btn btn-primary btn-lg btn-block lastPage" style="background-color: orange; color: white; border: 1px solid orange">등록 상품 더보기</button>
+            </form>
+        </th:block>
+        <th:block th:if="${hasNextPageYn eq 'N'}">
+            <span style="color: orange" class="lastPage">마지막 상품 입니다.</span>
+        </th:block>
+    </div>
+
+    <div th:if="${searchType eq 'CATEGORY'}" style="text-align: center; margin-top: 20px;">
+        <th:block th:if="${hasNextPageYn eq 'Y'}">
+            <form action="/boardList/category" method="get">
+                <input type="hidden" name="categoryCd" th:value="${categoryCd}">
+                <input type="hidden" name="offset" th:value="${boardList.size()}" />
+                <button type="submit" class="btn btn-primary btn-lg btn-block lastPage" style="background-color: orange; color: white; border: 1px solid orange">등록 상품 더보기</button>
+            </form>
+        </th:block>
+        <th:block th:if="${hasNextPageYn eq 'N'}">
+            <span style="color: orange" class="lastPage">마지막 상품 입니다.</span>
         </th:block>
     </div>
 </div>
+
+<script th:inline="javascript">
+    /* <![CDATA[ */
+    var errorMessage = /*[[${errorMsg}]]*/
+    var successMessage = /*[[${successMsg}]]*/
+    /* ]]> */
+
+    if (errorMessage != null) {
+        Swal.fire({
+            title: 'Error',
+            html: errorMessage,
+            icon: "error"
+        });
+    } else if (successMessage != null) {
+        Swal.fire({
+            title: 'Success',
+            html: successMessage,
+            icon: 'success'
+        })
+    }
+
+    //상품 더보기 버튼 누른 후, 스크롤 하단 이동
+    $(function () {
+        let len = document.querySelectorAll(".card").length;
+        window.scrollTo({top:document.querySelectorAll(".card")[len - 1].offsetTop, behavior:'smooth'});
+    });
+
+
+
+</script>
+
 </body>
 <footer th:replace="fragments/footer::footer"></footer>
 </html>
