상품 게시글 리스트 등록버튼 바로가기 추가

--- a/src/main/resources/templates/board/InquireBoardList.html
+++ b/src/main/resources/templates/board/InquireBoardList.html
@@ -211,4 +211,9 @@
 
 </body>
 <footer th:replace="fragments/footer::footer"></footer>
+<div style="position:fixed; bottom: 30px; margin-left: 1750px;">
+    <a href="/board/new">
+        <img src="https://img.icons8.com/stickers/100/null/filled-plus-2-math.png" alt="plus"/>
+    </a>
+</div>
 </html>
