--- a/src/main/resources/templates/purchase/InquirePurchaseList.html
+++ b/src/main/resources/templates/purchase/InquirePurchaseList.html
@@ -22,6 +22,13 @@
                                 </div>
                             </div>
                         </a>
+                        <div style="border-bottom: 1px solid orange; background-color: orange;">
+                            <a href="#" style="text-decoration: none">
+                                <div style="text-align: center; height: 30px; margin-top: 9px;">
+                                    <span style="color: white">후기 보내기</span>
+                                </div>
+                            </a>
+                        </div>
                     </th:block>
                 </ul>
             </div>
