--- a/src/main/resources/templates/keyword/KeywordForm.html
+++ b/src/main/resources/templates/keyword/KeywordForm.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head::head"></head>
-
 <header th:replace="fragments/header::header"></header>
 <body>
 <div class="container">
     <div class="input-form-background row">
         <div class="input-form mx-auto">
-            <h4 class="mb-3">키워드 등록</h4>
+            <h4 class="mb-3" style="display: inline-block">키워드 등록</h4>&nbsp;&nbsp;&nbsp; <img src="https://img.icons8.com/tiny-color/20/null/ask-question.png" style="margin-bottom: 10px;" title="등록된 키워드가 포함된 상품이 등록되면 알림이 가요~"/>
             <form class="validation-form" novalidate th:action="@{/keyword/new}" th:method="post" th:object="${keywordForm}">
                 <div class="mb-5">
                     <label th:for="keyword">키워드 설정</label><br>
@@ -47,6 +46,7 @@
             icon: 'success'
         })
     }
+
 
     function deleteKeyword(e) {
         let curKeywordListSize = parseInt($("#keywordListSize").text());
