--- a/src/main/resources/templates/sale/InquireSaleCompList.html
+++ b/src/main/resources/templates/sale/InquireSaleCompList.html
@@ -69,7 +69,7 @@
                                     </a>
                                 </div>
                                 <div style="float: right; width: 50%; background-color: orange">
-                                    <a th:href="@{/review/{boardId}/purchaser(boardId=${saleComp.boardId})}" style="text-decoration: none">
+                                    <a th:href="@{/review/{boardId}/toPurchaser(boardId=${saleComp.boardId})}" style="text-decoration: none">
                                         <div style="text-align: center; height: 30px; margin-top: 9px;">
                                             <span style="color: white">후기 보내기</span>
                                         </div>
