--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -45,6 +45,7 @@
                         <li><a class="dropdown-item" href="/board/new"><img src="https://img.icons8.com/ios/24/000000/add-to-collection--v2.png" alt="new"/> 물건 등록</a></li>
                         <li><a class="dropdown-item" href="/saleList/saleOn"><img src="https://img.icons8.com/ios/24/000000/land-sales.png" alt="sale"/> 판매 내역</a></li>
                         <li><a class="dropdown-item" href="/purchaseList"><img src="https://img.icons8.com/material-outlined/24/000000/shopping-cart--v1.png" alt="buy"/> 구매 내역</a></li>
+                        <li><a class="dropdown-item" href="/reviewList/all"><img src="https://img.icons8.com/ios/24/null/assignment-turned-in.png" alt="review"/> 거래 후기</a></li>
                         <li><a class="dropdown-item" href="/attentionList"><img src="https://img.icons8.com/ios/24/000000/novel--v1.png" alt="attention"/> 관심목록</a></li>
                         <li><a class="dropdown-item" href="/keyword/new"><img src="https://img.icons8.com/external-anggara-basic-outline-anggara-putra/24/000000/external-tag-social-media-interface-anggara-basic-outline-anggara-putra.png" alt="keyword" /> 키워드 설정</a></li>
                     </ul>
